# poc-nl2query-ai-agent

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_retrieval.py
agent/: cli.py  graph.py
agent/prompts/: prompts.py
agent/tools/: gcp_logging_query.py
api/: api_ingest.py
resources/: create_table.sql  openapi_mock.json
